--- a/date/2025-11/page-2.htm
+++ b/date/2025-11/page-2.htm
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-23-node-share-links.htm" title="11月23日→20.7M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">11月23日→20.7M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-shadowrocket-node.htm" title="12月11日→18.2M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月11日→18.2M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-21-free-high-speed-nodes.htm" title="11月21日→21.2M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">11月21日→21.2M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-23-free-v2ray-subscribe.htm" title="12月23日→18.8M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">12月23日→18.8M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-22-free-clash.htm" title="12月22日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月22日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-free-node-subscribe-links.htm" title="11月30日→21.5M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">11月30日→21.5M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-29-node-share.htm" title="11月29日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">11月29日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-free-v2ray.htm" title="11月7日→19M/S|2025年最新免费节点SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅链接地址，便宜机场推荐">11月7日→19M/S|2025年最新免费节点SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-27-clash-windows.htm" title="11月27日→19.8M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">11月27日→19.8M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-node-share-links.htm" title="12月1日→21.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月1日→21.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-11-shadowrocket-node.htm" title="12月11日→18.2M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月11日→18.2M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-2-free-subscribe-node.htm" title="12月2日→21.8M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月2日→21.8M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-6-free-node-subscribe.htm" title="12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-free-clash.htm" title="12月31日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月31日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-4-clash-windows.htm" title="12月4日→19.3M/S|2025年最新免费节点SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月4日→19.3M/S|2025年最新免费节点SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-21-free-high-speed-nodes.htm" title="11月21日→21.2M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">11月21日→21.2M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-26-free-subscribe-node.htm" title="11月26日→22.9M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">11月26日→22.9M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-10-clash-node.htm" title="12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-27-clash-v2ray-ss-ssr.htm" title="12月27日→22.8M/S|2025年最新免费节点V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">12月27日→22.8M/S|2025年最新免费节点V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
