--- a/free-nodes/2025-12-24-free-subscribe-node.htm
+++ b/free-nodes/2025-12-24-free-subscribe-node.htm
@@ -144,7 +144,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">农夫山泉（点击注册）</a>】</p>
 
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐4【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="11wam8Ig" rel="nofollow noopener" style="color:red;">飞鸟加速</a>】</h3><p>🚀 飞鸟加速 · 高速·稳定·无限可能</p><p>&nbsp;1. 多地专线高速节点，极速跨境体验，告别卡顿与延迟！</p><p>&nbsp;2. 一键解锁Netflix、Disney+、TikTok等全球流媒体，尽享自由精彩！</p><p>&nbsp;3. GPT专属线路支持，保障ChatGPT等AI服务高可用，稳定流畅！</p><p>&nbsp;4. 支持多设备同时使用，无限制，畅连全球！</p><p>&nbsp;5. 自有机房专柜，全球多地接入，安全可靠！</p><p>&nbsp;6. 专业客服团队7x24小时响应，使用无忧！</p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐4【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="11wam8Ig" rel="nofollow noopener" style="color:red;">飞鸟加速</a>】</h3><p>? 飞鸟加速 · 高速·稳定·无限可能</p><p>&nbsp;1. 多地专线高速节点，极速跨境体验，告别卡顿与延迟！</p><p>&nbsp;2. 一键解锁Netflix、Disney+、TikTok等全球流媒体，尽享自由精彩！</p><p>&nbsp;3. GPT专属线路支持，保障ChatGPT等AI服务高可用，稳定流畅！</p><p>&nbsp;4. 支持多设备同时使用，无限制，畅连全球！</p><p>&nbsp;5. 自有机房专柜，全球多地接入，安全可靠！</p><p>&nbsp;6. 专业客服团队7x24小时响应，使用无忧！</p>
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="11wam8Ig" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">飞鸟加速（点击注册）</a>】</p>
 
@@ -156,34 +156,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 如何安装？</h5></div>
+    <div class="panel-heading"><h5>Nekobox 可以定时更新订阅节点吗？</h5></div>
     <div class="panel-body">
-        Sing-box 支持多平台，包括 Windows、Linux、macOS 和 Android。可从官方 GitHub 页面下载预编译版本或通过命令行安装。配置文件采用 JSON 格式，兼容多种协议配置。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>PassWall2 如何实现自动节点切换？</h5></div>
-    <div class="panel-body">
-        通过延迟测速和策略组配置，PassWall2 可自动切换到延迟最低的节点。这样用户无需手动操作，即可在访问网页、视频或游戏时保持高速和稳定连接，优化网络体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>VLESS Reality 模式与 XTLS 模式有何不同？</h5></div>
-    <div class="panel-body">
-        VLESS Reality 通过伪造握手和真实网站的 TLS 指纹实现高仿真加密，而 XTLS 强调高性能传输。Reality 更注重隐蔽性，适合高安全需求环境；XTLS 则偏重传输效率。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan-Go 与 Trojan 有何不同？</h5></div>
-    <div class="panel-body">
-        Trojan-Go 是 Trojan 的分支版本，支持多路复用、QUIC、WebSocket 等新特性。它在兼容性和性能上都有显著提升，适合与现代客户端（如 Clash Meta、Sing-box）搭配使用。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 节点延迟高、丢包严重，常见排查步骤有哪些？</h5></div>
-    <div class="panel-body">
-        先用 ping 和 traceroute 检查到服务器的延迟与路由跳数；再通过测速工具测带宽并尝试更换不同出站端口或混淆方式；若仍然不稳，考虑更换节点或联系客服查看服务端链路质量。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>QuantumultX 如何通过策略组优化多应用分流？</h5></div>
-    <div class="panel-body">
-        QuantumultX 可以根据应用类型、端口和协议设置策略组，自动选择最优节点处理不同流量。这样可保证网页浏览、视频播放和游戏访问顺畅，提高整体网络效率。<hr />    </div>
+        支持。用户可设置定时更新频率，例如每天或每小时，程序会自动下载订阅节点并替换旧节点，确保节点始终可用并保持最新线路信息。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>PassWall2 自动切换节点机制如何工作？</h5></div>
@@ -191,9 +166,19 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         PassWall2 会根据节点延迟和丢包率测试结果，结合策略组自动选择最优节点处理流量。无需用户手动切换，保证网页、视频和游戏流量的速度和稳定性，优化网络体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>如何使用 Clash 配置订阅链接？</h5></div>
+    <div class="panel-heading"><h5>SSR 节点延迟高、丢包严重，常见排查步骤有哪些？</h5></div>
     <div class="panel-body">
-        在 Clash 中添加订阅链接时，用户需复制提供的 URL 并在客户端的配置界面中粘贴。Clash 会自动下载并更新配置文件。通过订阅，用户可以一键更新节点信息，无需手动导入，适合长期维护多个节点来源的用户。<hr />    </div>
+        先用 ping 和 traceroute 检查到服务器的延迟与路由跳数；再通过测速工具测带宽并尝试更换不同出站端口或混淆方式；若仍然不稳，考虑更换节点或联系客服查看服务端链路质量。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>VLESS Reality 模式与 XTLS 模式有何不同？</h5></div>
+    <div class="panel-body">
+        VLESS Reality 通过伪造握手和真实网站的 TLS 指纹实现高仿真加密，而 XTLS 强调高性能传输。Reality 更注重隐蔽性，适合高安全需求环境；XTLS 则偏重传输效率。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>PassWall2 如何实现自动节点切换？</h5></div>
+    <div class="panel-body">
+        通过延迟测速和策略组配置，PassWall2 可自动切换到延迟最低的节点。这样用户无需手动操作，即可在访问网页、视频或游戏时保持高速和稳定连接，优化网络体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Shadowrocket 支持自动测速吗？</h5></div>
@@ -201,9 +186,24 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         支持。Shadowrocket 可以批量测速节点延迟并标记最佳连接。用户还可设置自动切换到最低延迟节点，实现稳定高速的上网体验，尤其在网络波动较大的环境中效果明显。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekobox 可以定时更新订阅节点吗？</h5></div>
+    <div class="panel-heading"><h5>QuantumultX 如何通过策略组优化多应用分流？</h5></div>
     <div class="panel-body">
-        支持。用户可设置定时更新频率，例如每天或每小时，程序会自动下载订阅节点并替换旧节点，确保节点始终可用并保持最新线路信息。    </div>
+        QuantumultX 可以根据应用类型、端口和协议设置策略组，自动选择最优节点处理不同流量。这样可保证网页浏览、视频播放和游戏访问顺畅，提高整体网络效率。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Trojan-Go 与 Trojan 有何不同？</h5></div>
+    <div class="panel-body">
+        Trojan-Go 是 Trojan 的分支版本，支持多路复用、QUIC、WebSocket 等新特性。它在兼容性和性能上都有显著提升，适合与现代客户端（如 Clash Meta、Sing-box）搭配使用。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Sing-box 如何安装？</h5></div>
+    <div class="panel-body">
+        Sing-box 支持多平台，包括 Windows、Linux、macOS 和 Android。可从官方 GitHub 页面下载预编译版本或通过命令行安装。配置文件采用 JSON 格式，兼容多种协议配置。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>如何使用 Clash 配置订阅链接？</h5></div>
+    <div class="panel-body">
+        在 Clash 中添加订阅链接时，用户需复制提供的 URL 并在客户端的配置界面中粘贴。Clash 会自动下载并更新配置文件。通过订阅，用户可以一键更新节点信息，无需手动导入，适合长期维护多个节点来源的用户。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -232,16 +232,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-v2ray-subscribe.htm" title="11月5日→22.4M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">11月5日→22.4M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-5-free-ssr-node.htm" title="12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-14-node-share-links.htm" title="12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-3-free-subscribe-node.htm" title="12月3日→20M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">12月3日→20M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-9-clash-node.htm" title="11月9日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">11月9日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-11-shadowrocket-node.htm" title="12月11日→18.2M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月11日→18.2M/S|2025年最新免费节点Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-18-shadowrocket-node.htm" title="11月18日→21.5M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">11月18日→21.5M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-10-clash-node.htm" title="12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-24-free-subscribe-node.htm" title="12月24日→21.7M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月24日→21.7M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-9-free-subscribe-node.htm" title="12月9日→18.5M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月9日→18.5M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-free-ssr-node.htm" title="12月26日→20.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月26日→20.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-16-free-ssr-node.htm" title="12月16日→20.6M/S|2025年最新免费节点Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">12月16日→20.6M/S|2025年最新免费节点Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-node.htm" title="11月8日→21.5M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">11月8日→21.5M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-19-clash-v2ray-ss-ssr.htm" title="12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-high-speed-nodes.htm" title="11月10日→22M/S|2025年最新免费节点SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">11月10日→22M/S|2025年最新免费节点SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-28-free-clash-subscribe.htm" title="11月28日→20.4M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">11月28日→20.4M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-22-free-node-subscribe.htm" title="11月22日→20.4M/S|2025年最新免费节点Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">11月22日→20.4M/S|2025年最新免费节点Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-v2ray.htm" title="11月6日→18.3M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">11月6日→18.3M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-14-node-share-links.htm" title="12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -253,7 +253,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
