--- a/free-nodes/2025-12-25-free-node-subscribe.htm
+++ b/free-nodes/2025-12-25-free-node-subscribe.htm
@@ -149,7 +149,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.xiyou666.xyz/?path=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">西游云（点击注册）</a>】</p>
 
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐4【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="11wam8Ig" rel="nofollow noopener" style="color:red;">飞鸟加速</a>】</h3><p>🚀 飞鸟加速 · 高速·稳定·无限可能</p><p>&nbsp;1. 多地专线高速节点，极速跨境体验，告别卡顿与延迟！</p><p>&nbsp;2. 一键解锁Netflix、Disney+、TikTok等全球流媒体，尽享自由精彩！</p><p>&nbsp;3. GPT专属线路支持，保障ChatGPT等AI服务高可用，稳定流畅！</p><p>&nbsp;4. 支持多设备同时使用，无限制，畅连全球！</p><p>&nbsp;5. 自有机房专柜，全球多地接入，安全可靠！</p><p>&nbsp;6. 专业客服团队7x24小时响应，使用无忧！</p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐4【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="11wam8Ig" rel="nofollow noopener" style="color:red;">飞鸟加速</a>】</h3><p>? 飞鸟加速 · 高速·稳定·无限可能</p><p>&nbsp;1. 多地专线高速节点，极速跨境体验，告别卡顿与延迟！</p><p>&nbsp;2. 一键解锁Netflix、Disney+、TikTok等全球流媒体，尽享自由精彩！</p><p>&nbsp;3. GPT专属线路支持，保障ChatGPT等AI服务高可用，稳定流畅！</p><p>&nbsp;4. 支持多设备同时使用，无限制，畅连全球！</p><p>&nbsp;5. 自有机房专柜，全球多地接入，安全可靠！</p><p>&nbsp;6. 专业客服团队7x24小时响应，使用无忧！</p>
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="11wam8Ig" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">飞鸟加速（点击注册）</a>】</p>
 
@@ -208,37 +208,13 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="clearfix"></div>
 <div class="col-md-12 mt-5">
         <p>上一个：<a href="/free-nodes/2025-12-24-free-subscribe-node.htm">12月24日→21.7M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></p>
+        <p>下一个：<a href="/free-nodes/2025-12-26-free-ssr-node.htm">12月26日→20.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></p>
     </div>
 <h4>FAQ</h4>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>V2Ray 的策略组如何根据节点延迟自动切换？</h5></div>
-    <div class="panel-body">
-        策略组会根据节点延迟和丢包率自动选择最优节点。结合路由规则，可保证国内流量直连、海外流量走最佳节点，提高访问速度和连接稳定性，优化整体网络体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Surfboard 策略组如何提升在线视频体验？</h5></div>
-    <div class="panel-body">
-        Surfboard 可通过策略组将视频流量分配到低延迟、高带宽节点，自动切换到最佳节点，减少缓冲和卡顿，提高在线视频播放的流畅性和整体网络体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 的规则订阅更新机制是怎样的？</h5></div>
-    <div class="panel-body">
-        Sing-box 支持远程规则订阅 URL，可自动下载并更新节点和分流规则。用户可设置更新频率，如每天或每小时，确保规则和节点始终保持最新状态，提高网络管理效率。<hr />    </div>
-</div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Hiddify Next 可以兼容旧版 Hiddify 吗？</h5></div>
     <div class="panel-body">
         Hiddify Next 完全向下兼容旧版配置，用户可直接导入原有 JSON 或 YAML 文件。系统会自动检测格式并进行迁移，非常适合升级旧环境到新版客户端。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Hiddify Next 的主要用途是什么？</h5></div>
-    <div class="panel-body">
-        Hiddify Next 是 Hiddify 系列的新版本，集成了 VLESS、Trojan、Reality 等新型协议支持。它为用户提供一站式代理配置与分享功能，适合初学者快速上手使用。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekobox 与 Hiddify Next 有什么区别？</h5></div>
-    <div class="panel-body">
-        Nekobox 更注重轻量化和本地化，界面简洁，支持多协议基础功能；而 Hiddify Next 则整合了订阅转换、测速、规则分流等高级功能，更适合技术用户使用。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Sing-box 可以替换 Clash 的 YAML 配置吗？</h5></div>
@@ -246,9 +222,29 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         可以。Sing-box 原生支持解析 Clash YAML 配置，并自动转换为自身 JSON 结构。节点和规则基本兼容，但部分脚本和自定义插件可能需要手动调整。<hr />    </div>
 </div>
 <div class="panel panel-default">
+    <div class="panel-heading"><h5>V2Ray 的策略组如何根据节点延迟自动切换？</h5></div>
+    <div class="panel-body">
+        策略组会根据节点延迟和丢包率自动选择最优节点。结合路由规则，可保证国内流量直连、海外流量走最佳节点，提高访问速度和连接稳定性，优化整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
     <div class="panel-heading"><h5>WinXray 节点延迟检测如何优化访问速度？</h5></div>
     <div class="panel-body">
         WinXray 会定期测速节点延迟和丢包率，结合策略组自动切换到最佳节点。保证网页、视频和游戏流量走低延迟节点，提升访问速度和连接稳定性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Nekobox 与 Hiddify Next 有什么区别？</h5></div>
+    <div class="panel-body">
+        Nekobox 更注重轻量化和本地化，界面简洁，支持多协议基础功能；而 Hiddify Next 则整合了订阅转换、测速、规则分流等高级功能，更适合技术用户使用。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>V2Ray 如何隐藏真实 IP？</h5></div>
+    <div class="panel-body">
+        通过启用 TLS、Reality 或 WebSocket + CDN 转发，V2Ray 可有效隐藏真实服务器 IP。这样外部监测只能看到中转节点，从而提升匿名性与安全性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Hiddify Next 的主要用途是什么？</h5></div>
+    <div class="panel-body">
+        Hiddify Next 是 Hiddify 系列的新版本，集成了 VLESS、Trojan、Reality 等新型协议支持。它为用户提供一站式代理配置与分享功能，适合初学者快速上手使用。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>WinXray 的多策略组有什么作用？</h5></div>
@@ -256,9 +252,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         多策略组可以将节点按用途、延迟或地域分类，结合路由规则实现自动分流。不同类型流量可走不同节点，提升访问速度和稳定性，特别适合多应用使用场景。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>V2Ray 如何隐藏真实 IP？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 的规则订阅更新机制是怎样的？</h5></div>
     <div class="panel-body">
-        通过启用 TLS、Reality 或 WebSocket + CDN 转发，V2Ray 可有效隐藏真实服务器 IP。这样外部监测只能看到中转节点，从而提升匿名性与安全性。    </div>
+        Sing-box 支持远程规则订阅 URL，可自动下载并更新节点和分流规则。用户可设置更新频率，如每天或每小时，确保规则和节点始终保持最新状态，提高网络管理效率。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Surfboard 策略组如何提升在线视频体验？</h5></div>
+    <div class="panel-body">
+        Surfboard 可通过策略组将视频流量分配到低延迟、高带宽节点，自动切换到最佳节点，减少缓冲和卡顿，提高在线视频播放的流畅性和整体网络体验。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -287,16 +288,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-21-clash-v2ray-ss-ssr.htm" title="12月21日→20.3M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月21日→20.3M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-27-clash-windows.htm" title="11月27日→19.8M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">11月27日→19.8M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-3-free-subscribe-node.htm" title="12月3日→20M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">12月3日→20M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-18-shadowrocket-node.htm" title="11月18日→21.5M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">11月18日→21.5M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-2-free-subscribe-node.htm" title="12月2日→21.8M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月2日→21.8M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-26-free-subscribe-node.htm" title="11月26日→22.9M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">11月26日→22.9M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-v2ray.htm" title="12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-18-free-clash-subscribe.htm" title="12月18日→18M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐">12月18日→18M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-14-node-share-links.htm" title="12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-5-free-ssr-node.htm" title="12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-23-node-share-links.htm" title="11月23日→20.7M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">11月23日→20.7M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-1-node-share-links.htm" title="12月1日→21.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月1日→21.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-6-free-node-subscribe.htm" title="12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-9-free-subscribe-node.htm" title="12月9日→18.5M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月9日→18.5M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-19-clash-v2ray-ss-ssr.htm" title="12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-v2ray.htm" title="12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-free-clash.htm" title="12月31日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月31日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-9-clash-node.htm" title="11月9日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">11月9日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +309,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
