--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -123,6 +123,48 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-12-07">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-12-7-clash-windows.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="12月7日→18.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-12-7-clash-windows.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">12月7日→18.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、欧洲、加拿大、日本、美国、新加坡、韩国等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-12-06">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-12-6-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-12-6-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、韩国、香港、日本、新加坡、欧洲、美国等地区,最高速度可达19.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-12-05">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-12-5-free-ssr-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-12-5-free-ssr-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、新加坡、美国、加拿大、香港、日本、欧洲等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-12-04">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-12-4-clash-windows.htm" class="xcblog-blog-url">
@@ -221,48 +263,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-11-27">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-11-27-clash-windows.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/c0fded8a01dfbc7be86e79e49ac0a627.webp" alt="11月27日→19.8M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-11-27-clash-windows.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">11月27日→19.8M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了韩国、加拿大、新加坡、香港、欧洲、美国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-11-26">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-11-26-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="11月26日→22.9M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-11-26-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">11月26日→22.9M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、新加坡、欧洲、韩国、日本、美国、加拿大等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-11-23">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-11-23-node-share-links.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/cc93aa4b19cc04eb52a9aba9ef1e6db7.webp" alt="11月23日→20.7M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-11-23-node-share-links.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">11月23日→20.7M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、加拿大、香港、新加坡、欧洲、美国、韩国等地区,最高速度可达20.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-v2ray.htm" title="12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-node-share-links.htm" title="12月1日→21.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月1日→21.2M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-17-clash-node.htm" title="11月17日→20.9M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">11月17日→20.9M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-28-free-clash-subscribe.htm" title="11月28日→20.4M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">11月28日→20.4M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-v2ray-subscribe.htm" title="11月5日→22.4M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">11月5日→22.4M/S|2025年最新免费节点Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-24-free-subscribe-node.htm" title="12月24日→21.7M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月24日→21.7M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-10-clash-node.htm" title="12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-19-clash-v2ray-ss-ssr.htm" title="12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-22-free-node-subscribe.htm" title="11月22日→20.4M/S|2025年最新免费节点Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">11月22日→20.4M/S|2025年最新免费节点Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-15-free-clash.htm" title="11月15日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">11月15日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-5-free-ssr-node.htm" title="12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月5日→20.4M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-clash-node.htm" title="12月17日→22.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">12月17日→22.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-29-node-share.htm" title="11月29日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">11月29日→18.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-3-free-subscribe-node.htm" title="12月3日→20M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">12月3日→20M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-free-ssr-node.htm" title="12月26日→20.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月26日→20.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-node.htm" title="11月8日→21.5M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">11月8日→21.5M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-node-subscribe.htm" title="12月25日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月25日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-6-free-node-subscribe.htm" title="12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月6日→19.5M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-7-clash-windows.htm" title="12月7日→18.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐">12月7日→18.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
